# bimo

./: LICENSE  bimo.cabal  stack.yaml
app/: Main.hs
src/: Bimo.hs
src/Bimo/: Add.hs  Build.hs  Commands.hs  Config.hs  List.hs  Model.hs  New.hs  Path.hs  Project.hs  Run.hs
src/Bimo/Commands/: Add.hs  Build.hs  Clean.hs  Delete.hs  List.hs  New.hs  Rename.hs  Run.hs  Show.hs  Unpack.hs
src/Bimo/Types/: Env.hs  Project.hs
src/Bimo/Types/Config/: Model.hs  Models.hs  Project.hs
test/integration/: IntegrationSpec.hs
test/integration/lib/: TestLib.hs
test/integration/tests/add-model/: Main.hs
test/integration/tests/add-model/files/: another-model.yaml
test/integration/tests/add-template/: Main.hs
test/integration/tests/add-template/files/: config.yaml
test/integration/tests/build-c-model-user-build-script/: Main.hs
test/integration/tests/build-c-model-user-build-script/files/: buildscript  model.yaml
test/integration/tests/build-c-with-mult-files-and-libs/files/: model.yaml
test/integration/tests/build-project/: Main.hs
test/integration/tests/build-project/files/: config.yaml
test/integration/tests/build-simple-c-model/: Main.hs
test/integration/tests/build-simple-c-model-with-lib/: Main.hs
test/integration/tests/build-simple-c-model-with-lib/files/: model.yaml
test/integration/tests/build-simple-c-model/files/: invalid-model.yaml  model.yaml
test/integration/tests/build-simple-model/: Main.hs
test/integration/tests/build-simple-model/files/: model.yaml
test/integration/tests/clean/: Main.hs
test/integration/tests/clean/files/: config.yaml
test/integration/tests/create-empty-model/: Main.hs
test/integration/tests/create-empty-project/: Main.hs
test/integration/tests/delete-model/: Main.hs
test/integration/tests/delete-template/: Main.hs
test/integration/tests/file-logging/: Main.hs
test/integration/tests/file-logging/files/: config.yaml
test/integration/tests/new-empty-project/: Main.hs
test/integration/tests/new-project-from-template/: Main.hs
test/integration/tests/new-project-from-template-unpack/: Main.hs
test/integration/tests/rename-model/: Main.hs
test/integration/tests/rename-template/: Main.hs
test/integration/tests/run-project/: Main.hs
test/integration/tests/unpack-model/: Main.hs
(+32 files in other folders)
