name:                bimo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/nitroFamily/bimo#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksandr
maintainer:          samaydanov@gmail.com
copyright:           2016 nitroFamily
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bimo
                     , Bimo.Commands
                     , Bimo.New
                     , Bimo.Build
                     , Bimo.Types.Env
                     , Bimo.Types.Config.Project
                     , Bimo.Types.Config.Model
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , mtl
                     , transformers
                     , exceptions
                     , monad-logger
                     , directory
                     , yaml
                     , aeson-pretty
                     , bytestring
                     , path
                     , path-io
                     , filepath
  default-language:    Haskell2010

executable bimo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bimo
                     , optparse-applicative
                     , mtl
                     , monad-logger
  default-language:    Haskell2010

test-suite bimo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             integration/IntegrationSpec.hs
  build-depends:       base
                     , bimo
                     , hspec
                     , containers
                     , unix
                     , directory
                     , filepath
                     , temporary
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nitroFamily/bimo
